[package]
name = "yuga"
version = "0.1.0"
authors = ["Yechan Bae <yechan@gatech.edu>"]
default-run = "yuga"
edition = "2021"
exclude = ["samples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = true
doctest = false

[[bin]]
name = "yuga"
test = false
doctest = false

[[bin]]
name = "cargo-yuga"
test = false
doctest = false

[dependencies]
cargo_metadata = "0.19"
chrono = "0.4"
dashmap = "6.1"
fern = "0.7"
if_chain = "1.0"
log = "0.4"
maplit = "1.0.2"
once_cell = "1.5.2"
parking_lot = "0.12.3"
rustc_version = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
snafu = "*"
termcolor = "1.1.2"
toml = "0.8.20"
wait-timeout = "0.2"
bitflags = "2.4.1"
which = "7.0.3"
plist = "~1.7.1"
comrak = "0.38.0"

[features]
backtraces = ["snafu/backtraces", "snafu/backtraces-impl-backtrace-crate"]

[package.metadata.rust-analyzer]
rustc_private = true
